appId: com.hewadadil.pantrypal
---
- tapOn:
    id: tab-grocery
- extendedWaitUntil:
    visible:
      id: grocery-item-milk
    timeout: 15000
- tapOn:
    point: "50%,67%"
- extendedWaitUntil:
    notVisible:
      id: grocery-item-milk
    timeout: 15000
